<resources>
    <string name="app_name">Nucleus</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="send_message">Send Message</string>
    <string name="hello_world">hello world string</string>

    <!-- TODO: We'll organize this later -AB-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server">tritium</string>
    <string name="FuckTheWorld">Fuck Everything</string>
    <string name="addFriend">Add Friend</string>
    <string name="age">Age:</string>
    <string name="male_female">Male/Female</string>
    <string name="gender">Gender:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="account_registration">Register</string>
    <string name="location">Location:</string>
    <string name="register">Register</string>
    <string name="agreement">I agree to all of the TERMS AND CONDITIONS by Tritium Labs.</string>
    <string name="sign_up">Sign Up</string>
    <string name="changepwtitle">Change Password</string>
    <string name="currentpwfield">Current Password</string>
    <string name="newpwfield">New Password</string>
    <string name="verifypwfield">Verify Password</string>
    <string name="forgotpwlinktext">I forgot my pw like a dumb shit I need a e-mail sent to me</string>
    <string name="mysterySetting">Mystery</string>
    <string name="welcome_username">Username</string>
    <string name="usernamestring">PulsatingVagina</string>
    <string name="whereimfrom">City, State</string>
    <string name="userbio">I eat penis for dinner. My vagina eats sharks. My ovaries have lazers attatched.</string>
    <string name="mainusertext">Hey! Me too!</string>
    <string name="otherusertext">I\'m a message bubble!</string>
    <string name="welcomemessage">Welcome Back!</string>
    <string name="randomchatbutton">Chat Now!</string>
    <string name="userswithinmile">24 Users within 10 miles!</string>
    <string name="gochatrooms">Join the rooms!</string>
    <string name="userbio_profile">Hello, I am the user bio, this is just a demo of how things will look in a profile layout scheme for this particular scroll.</string>
    <string name="profiletextgender">Female</string>
    <string name="profiletextage">Age</string>
    <string name="profiletextlocation">Warwick, RI</string>
    <string name="profiletextname">PulsatingVagina</string>
    <string name="profiletextheader">Profile</string>
    <string name="usersettings">Settings</string>
    <string name="animationjerkoff">animationJerkOff</string>
    <string name="groupiestitle">Groupies</string>
    <string name="upload_photo">[ Upload Photo ]</string>
</resources>
