<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tritiumlabs.arthur.nucleus.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/fuck_everything"
        android:orderInCategory="100"
        android:title="@string/FuckTheWorld"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_friend"
        android:orderInCategory="100"
        android:title="@string/addFriend"
        app:showAsAction="never" />
    <item
        android:id="@+id/mystery"
        android:orderInCategory="100"
        android:title="@string/mysterySetting"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:icon="@drawable/message_noti"
        android:title="@string/refresh"
        app:showAsAction="always" />
</menu>
