<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Profile"
            android:id="@+id/textHeader"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="50sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imgIdk"
            android:src="@android:drawable/ic_menu_report_image"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textHeader"
            android:layout_marginLeft="50dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imgUserProfile"
            android:src="@drawable/nophoto"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgEditProfile"
            android:layout_alignTop="@+id/imgUserProfile"
            android:layout_toStartOf="@+id/imgUserProfile"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profiletextname"
            android:id="@+id/textName"
            android:layout_below="@+id/imgUserProfile"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:phoneNumber="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profiletextlocation"
            android:id="@+id/textLocation"
            android:textSize="25sp"
            android:layout_below="@+id/textName"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:id="@+id/textAge"
            android:layout_below="@+id/textLocation"
            android:layout_alignStart="@+id/textLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/textGender"
            android:layout_below="@+id/textLocation"
            android:layout_alignEnd="@+id/textLocation" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/userbio_profile"
                android:id="@+id/textProfileBio" />
        </ScrollView>
    </RelativeLayout>

</LinearLayout>