<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Welcome Back!"
            android:id="@+id/textWelcome"
            android:layout_weight="0.5"
            android:textSize="40sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imgSettings"
            android:src="@android:drawable/ic_menu_manage"
            android:layout_weight="0.33" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:id="@+id/imgMainUserPhoto"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/nophoto"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="PulsatingVagina"
            android:id="@+id/textUser"
            android:layout_alignTop="@+id/imgMainUserPhoto"
            android:layout_toEndOf="@+id/imgMainUserPhoto"
            android:layout_marginStart="10dp"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgEditProfile"
            android:src="@android:drawable/checkbox_on_background"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_alignBottom="@+id/textUser"
            android:layout_toEndOf="@+id/textUser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whereimfrom"
            android:id="@+id/textFrom"
            android:layout_alignStart="@+id/textUser"
            android:textSize="25sp"
            android:layout_above="@+id/scrollView3"
            android:layout_below="@+id/textUser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ageText"
            android:layout_below="@+id/imgMainUserPhoto"
            android:layout_alignStart="@+id/imgMainUserPhoto"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/genderText"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:layout_below="@+id/ageText"
            android:layout_alignStart="@+id/ageText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9/24/2016"
            android:id="@+id/dateText"
            android:textSize="20sp"
            android:layout_below="@+id/genderText"
            android:layout_alignStart="@+id/genderText" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3"
            android:layout_alignStart="@+id/textFrom"
            android:layout_alignBottom="@+id/dateText"
            android:layout_alignEnd="@+id/imgEditProfile"
            android:layout_below="@+id/imgMainUserPhoto"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I eat penis for dinner. My vagina eats sharks. I ovaries have lazers attatched."
                android:id="@+id/textBio" />
        </ScrollView>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:id="@+id/scrollView4"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/userswithinmile"
                    android:id="@+id/textWithin"
                    android:textSize="25sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/randomchatbutton"
                    android:id="@+id/buttonChatnow"
                    android:layout_below="@+id/textWithin"
                    android:layout_centerHorizontal="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/buttonChatnow">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="400 users in the chatroom!"
                        android:id="@+id/textView14"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gochatrooms"
                        android:id="@+id/buttonChatRooms"
                        android:layout_below="@+id/textView14"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp" />


                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_marginLeft="25dp" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@android:drawable/ic_menu_myplaces" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@android:drawable/ic_menu_mapmode" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:src="@android:drawable/ic_menu_view" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:src="@android:drawable/ic_menu_my_calendar" />

        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView10"
            android:src="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

</LinearLayout>